syntax = "proto3";

package walletservice.models.v1;
option go_package = "github.com/J0hnLenin/WalletService/internal/pb/models";

message Wallet {
  string id = 1;
  int64 balance = 2;
}

message Operation {
  string walletId = 1;
  OperationType operationType = 2;
  int64 amount = 3;
  
  enum OperationType {
    OPERATION_TYPE_UNSPECIFIED = 0;
    DEPOSIT = 1;
    WITHDRAW = 2;
  }
}







